--- a/templates/agenda.html
+++ b/templates/agenda.html
@@ -4,9 +4,16 @@
 
 <h2>Agendamentos</h2>
 
+<a href="/agenda/evento/">
+    <button type="button">Novo Evento</button>
+</a>
+
 <ul style="font-size: 20px;">
     {% for event in events %}
-    <li>{{ event.title }} - {{ event.get_date }}</li>
+    <li>{{ event.title }} - {{ event.get_date }}
+        (<a href="/agenda/evento/?id={{ event.id }}">Editar</a>
+        /<a href="/agenda/evento/delete/{{ event.id }}">Excluir</a>)
+    </li>
     {% endfor %}
 </ul>
 
